--- a/memory/app/src/main/res/layout/activity_main.xml
+++ b/memory/app/src/main/res/layout/activity_main.xml
@@ -4,5 +4,175 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/colorBackground">
+
+    <ImageButton
+        android:id="@+id/cell1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toTopOf="@id/cell4"
+        app:layout_constraintEnd_toStartOf="@id/cell2"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
+    <ImageButton
+        android:id="@+id/cell2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toTopOf="@id/cell5"
+        app:layout_constraintEnd_toStartOf="@id/cell3"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@id/cell1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
+    <ImageButton
+        android:id="@+id/cell3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toTopOf="@id/cell6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@id/cell2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
+    <ImageButton
+        android:id="@+id/cell4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toTopOf="@id/cell7"
+        app:layout_constraintEnd_toStartOf="@id/cell5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cell1"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
+    <ImageButton
+        android:id="@+id/cell5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toTopOf="@id/cell8"
+        app:layout_constraintEnd_toStartOf="@id/cell6"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@id/cell4"
+        app:layout_constraintTop_toBottomOf="@id/cell2"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
+    <ImageButton
+        android:id="@+id/cell6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toTopOf="@id/cell9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@id/cell5"
+        app:layout_constraintTop_toBottomOf="@id/cell3"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
+    <ImageButton
+        android:id="@+id/cell7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toTopOf="@id/cell10"
+        app:layout_constraintEnd_toStartOf="@id/cell8"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cell4"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
+    <ImageButton
+        android:id="@+id/cell8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toTopOf="@id/cell11"
+        app:layout_constraintEnd_toStartOf="@id/cell9"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@id/cell7"
+        app:layout_constraintTop_toBottomOf="@id/cell5"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
+    <ImageButton
+        android:id="@+id/cell9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toTopOf="@id/cell12"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@id/cell8"
+        app:layout_constraintTop_toBottomOf="@id/cell6"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
+    <ImageButton
+        android:id="@+id/cell10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/cell11"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cell7"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
+    <ImageButton
+        android:id="@+id/cell11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/cell12"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@id/cell10"
+        app:layout_constraintTop_toBottomOf="@id/cell8"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
+    <ImageButton
+        android:id="@+id/cell12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:background="@color/colorBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@id/cell11"
+        app:layout_constraintTop_toBottomOf="@id/cell9"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/none" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
